--- a/src/styles/formHandlerGM.scss
+++ b/src/styles/formHandlerGM.scss
@@ -23,7 +23,7 @@
     border: solid 2px white;
     border-radius: 0.625rem;
     color: white;
-    font-size: 22px;
+    font-size: 20px;
   
   }
   
@@ -32,7 +32,7 @@
     opacity: 0;
     width: 100%; // Ceci surcharge la largeur de la base.
     color: white;
-    font-size: 18px;
+    font-size: 16px;
     height: 15rem;
     overflow-y: scroll;
     position: absolute;
@@ -53,7 +53,7 @@
 
 
   label {
-    font-size: 24px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -67,7 +67,7 @@
     border-radius: 0.625rem;
     color: white;
 
-    font-size: 22px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -79,10 +79,8 @@
     border: solid 2px white;
     border-radius: 0.625rem;
     color: white;
-    height: 23.75rem;
-    font-size: 22px;
-
-    font-size: 24px;
+    height: 19.3rem;
+    font-size: 20px;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -96,7 +94,7 @@
     border: solid 2px white;
     border-radius: 0.625rem;
     color: white;
-    font-size: 22px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -116,13 +114,13 @@
   width: 1rem;
   height: 1rem;
   right: 0.625rem;
-  bottom: calc(50% - 0.5rem);
+  bottom: calc(50% - 1.6rem);
   z-index: 1;
   &.open {
     transform: rotate(-90deg);
     transition: transform 0.3s ease;
   }
-  &.false {
+  &.close {
     transform: rotate(0deg);
     transition: transform 0.3s ease;
   }
